--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <mybatis.boot.version>1.3.2</mybatis.boot.version>
         <pagehelper.boot.version>1.2.5</pagehelper.boot.version>
         <druid.version>1.1.14</druid.version>
+        <fastjson.version>1.2.38</fastjson.version>
+        <guava.version>18.0</guava.version>
     </properties>
 
     <dependencies>
@@ -84,13 +86,29 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>2.1.1.RELEASE</version>
         </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>18.0</version>
+            <version>${guava.version}</version>
+        </dependency>
+
+        <!--json-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
         </dependency>
 
 
